[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/NewRecipe.gd" type="Script" id=1]
[ext_resource path="res://Scenes/IngredientFinder.tscn" type="PackedScene" id=2]

[node name="NewRecipe" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeName" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1584.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="Label" type="Label" parent="VBoxContainer/RecipeName"]
margin_top = 9.0
margin_right = 89.0
margin_bottom = 23.0
text = "Recipe Name:"

[node name="RecipeName" type="LineEdit" parent="VBoxContainer/RecipeName"]
margin_left = 93.0
margin_right = 1584.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="TimeToCook" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 1584.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 32 )

[node name="Label" type="Label" parent="VBoxContainer/TimeToCook"]
margin_top = 9.0
margin_right = 71.0
margin_bottom = 23.0
text = "Cook Time:"

[node name="TimeToCook" type="SpinBox" parent="VBoxContainer/TimeToCook"]
margin_left = 75.0
margin_right = 1584.0
margin_bottom = 32.0
size_flags_horizontal = 3
suffix = "Minutes"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 1584.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 32 )
text = "Ingredients"
align = 1
valign = 1

[node name="AddIngredient" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 1584.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 32 )
text = "Add Ingredient +"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 1584.0
margin_bottom = 435.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ingredients" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1584.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 439.0
margin_right = 1584.0
margin_bottom = 453.0
text = "Instructions"
align = 1

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 457.0
margin_right = 1584.0
margin_bottom = 748.0
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 752.0
margin_right = 1584.0
margin_bottom = 784.0
rect_min_size = Vector2( 0, 32 )
alignment = 2

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 1196.0
margin_right = 1376.0
margin_bottom = 32.0
rect_min_size = Vector2( 180, 0 )
text = "Delete Recipe"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1380.0
margin_right = 1480.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )
text = "Cancel"

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1484.0
margin_right = 1584.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )
text = "Save"

[node name="IngredientFinder" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 128.0
margin_top = 128.0
margin_right = -128.0
margin_bottom = -128.0

[connection signal="pressed" from="VBoxContainer/AddIngredient" to="." method="_on_AddIngredient_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="ingredient_selected" from="IngredientFinder" to="." method="_on_IngredientFinder_ingredient_selected"]
